{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 38,
  "lineage": "34f476cf-ee5c-b471-a921-9efb6fb6da4b",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df5c32c4d4710802",
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:instance/i-0ea796f14ce30cdb5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea796f14ce30cdb5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e6b875d63ecef2ef",
            "private_dns": "ip-10-0-1-67.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.67",
            "public_dns": "ec2-3-106-138-137.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.106.138.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01c852df90b24063b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09c88742c6e63748c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0088f999867fcd249",
            "tags": {
              "Name": "Bastion Instance - test1"
            },
            "tags_all": {
              "Name": "Bastion Instance - test1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c88742c6e63748c"
            ]
          },
          "dependencies": [
            "module.instances.aws_db_instance.wordpress_db",
            "module.instances.aws_db_subnet_group.db-subnet",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_subnet.private_subnet_3",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.lb_sg",
            "module.security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:loadbalancer/app/wordpress-lb-test1/1793732abc990a20",
            "arn_suffix": "app/wordpress-lb-test1/1793732abc990a20",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-lb-test1-1390621000.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:loadbalancer/app/wordpress-lb-test1/1793732abc990a20",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-lb-test1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e5086f05c4b1aaa5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0088f999867fcd249"
              },
              {
                "subnet_id": "subnet-08bfe1c241d4f91d3"
              }
            ],
            "subnets": [
              "subnet-0088f999867fcd249",
              "subnet-08bfe1c241d4f91d3"
            ],
            "tags": {
              "Name": "Application Load Balancer - test1"
            },
            "tags_all": {
              "Name": "Application Load Balancer - test1"
            },
            "vpc_id": "vpc-00d71a8d5c877cfe1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wordpress_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:listener/app/wordpress-lb-test1/1793732abc990a20/68419de02375a22a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:targetgroup/wordpress-tg-test1/6b82c89a3aa156fd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:listener/app/wordpress-lb-test1/1793732abc990a20/68419de02375a22a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:loadbalancer/app/wordpress-lb-test1/1793732abc990a20",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "Listener for LB - test1"
            },
            "tags_all": {
              "Name": "Listener for LB - test1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instances.aws_db_instance.wordpress_db",
            "module.instances.aws_db_subnet_group.db-subnet",
            "module.instances.aws_efs_file_system.wordpress_efs",
            "module.instances.aws_efs_mount_target.wordpress_mount_target",
            "module.instances.aws_launch_configuration.wordpress_lc",
            "module.instances.aws_lb.wordpress_lb",
            "module.instances.aws_lb_target_group.wordpress_tg",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_subnet.private_subnet_3",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.efs_sg",
            "module.security.aws_security_group.lb_sg",
            "module.security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:targetgroup/wordpress-tg-test1/6b82c89a3aa156fd",
            "arn_suffix": "targetgroup/wordpress-tg-test1/6b82c89a3aa156fd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 25,
                "matcher": "200,301",
                "path": "/wordpress",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:851725468631:targetgroup/wordpress-tg-test1/6b82c89a3aa156fd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tg-test1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Target Group - test1"
            },
            "tags_all": {
              "Name": "Target Group - test1"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "dependencies": [
            "module.instances.aws_db_instance.wordpress_db",
            "module.instances.aws_db_subnet_group.db-subnet",
            "module.instances.aws_efs_file_system.wordpress_efs",
            "module.instances.aws_efs_mount_target.wordpress_mount_target",
            "module.instances.aws_launch_configuration.wordpress_lc",
            "module.instances.aws_lb.wordpress_lb",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_subnet.private_subnet_3",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.efs_sg",
            "module.security.aws_security_group.lb_sg",
            "module.security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edefc3578a12804c",
            "domain": "vpc",
            "id": "eipalloc-0edefc3578a12804c",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-13-211-99-242.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.211.99.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:internet-gateway/igw-00bd48962c2115b46",
            "id": "igw-00bd48962c2115b46",
            "owner_id": "851725468631",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edefc3578a12804c",
            "association_id": "eipassoc-0f9c8858d13494a3a",
            "connectivity_type": "public",
            "id": "nat-03b4634ee08b9f1b1",
            "network_interface_id": "eni-07cc63415012ba683",
            "private_ip": "10.0.1.251",
            "public_ip": "13.211.99.242",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0088f999867fcd249",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:route-table/rtb-023b0737cf75b6ff4",
            "id": "rtb-023b0737cf75b6ff4",
            "owner_id": "851725468631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03b4634ee08b9f1b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:route-table/rtb-0bd197460ec59a8f5",
            "id": "rtb-0bd197460ec59a8f5",
            "owner_id": "851725468631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00bd48962c2115b46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f698072ec24ffbf",
            "route_table_id": "rtb-023b0737cf75b6ff4",
            "subnet_id": "subnet-0f6b2345cca438ebf"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_route",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034cb3a3a0450063e",
            "route_table_id": "rtb-023b0737cf75b6ff4",
            "subnet_id": "subnet-0a90712d0ee7d1c03"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_route",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_3_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e271f98812964b4",
            "route_table_id": "rtb-023b0737cf75b6ff4",
            "subnet_id": "subnet-02037c310fb3f0077"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_route",
            "module.networking.aws_subnet.private_subnet_3",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061e9baee3c53d4db",
            "route_table_id": "rtb-0bd197460ec59a8f5",
            "subnet_id": "subnet-0088f999867fcd249"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_route",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a39b28aa3cd0c1eb",
            "route_table_id": "rtb-0bd197460ec59a8f5",
            "subnet_id": "subnet-08bfe1c241d4f91d3"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_route",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:subnet/subnet-0f6b2345cca438ebf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6b2345cca438ebf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725468631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1 - test1"
            },
            "tags_all": {
              "Name": "Private Subnet 1 - test1"
            },
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:subnet/subnet-0a90712d0ee7d1c03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a90712d0ee7d1c03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725468631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2 - test1"
            },
            "tags_all": {
              "Name": "Private Subnet 2 - test1"
            },
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:subnet/subnet-02037c310fb3f0077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02037c310fb3f0077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725468631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 3 - test1"
            },
            "tags_all": {
              "Name": "Private Subnet 3 - test1"
            },
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:subnet/subnet-0088f999867fcd249",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0088f999867fcd249",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725468631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1 - test1"
            },
            "tags_all": {
              "Name": "Public Subnet 1 - test1"
            },
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:subnet/subnet-08bfe1c241d4f91d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bfe1c241d4f91d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725468631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2 - test1"
            },
            "tags_all": {
              "Name": "Public Subnet 2 - test1"
            },
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:vpc/vpc-00d71a8d5c877cfe1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c9f64eebac3639d",
            "default_route_table_id": "rtb-05fac3fa274685b46",
            "default_security_group_id": "sg-0ef5f5d1842f40f77",
            "dhcp_options_id": "dopt-005e63162c413eb8e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d71a8d5c877cfe1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05fac3fa274685b46",
            "owner_id": "851725468631",
            "tags": {
              "Name": "test1-VPC"
            },
            "tags_all": {
              "Name": "test1-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:security-group/sg-09c88742c6e63748c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c88742c6e63748c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240416015044044000000002",
            "name_prefix": "terraform-",
            "owner_id": "851725468631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group - test1"
            },
            "tags_all": {
              "Name": "RDS Security Group - test1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:security-group/sg-025f8bc3997eeba15",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025f8bc3997eeba15",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09c88742c6e63748c"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e5086f05c4b1aaa5"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e5086f05c4b1aaa5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240416015046377700000005",
            "name_prefix": "terraform-",
            "owner_id": "851725468631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2 Security Group - test1"
            },
            "tags_all": {
              "Name": "EC2 Security Group - test1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:security-group/sg-03a5f90828d3c2e81",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a5f90828d3c2e81",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025f8bc3997eeba15"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "terraform-20240416015048576500000006",
            "name_prefix": "terraform-",
            "owner_id": "851725468631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EFS Security Group - test1"
            },
            "tags_all": {
              "Name": "EFS Security Group - test1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:security-group/sg-0e5086f05c4b1aaa5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5086f05c4b1aaa5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240416015044040900000001",
            "name_prefix": "terraform-",
            "owner_id": "851725468631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LB Security Group - test1"
            },
            "tags_all": {
              "Name": "LB Security Group - test1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:851725468631:security-group/sg-0a236efb54c39f512",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a236efb54c39f512",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025f8bc3997eeba15",
                  "sg-09c88742c6e63748c"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025f8bc3997eeba15",
                  "sg-09c88742c6e63748c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20240416015048579300000007",
            "name_prefix": "terraform-",
            "owner_id": "851725468631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group - test1"
            },
            "tags_all": {
              "Name": "RDS Security Group - test1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d71a8d5c877cfe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.bastion_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}